# XSLib

./: CMakeLists.txt
inc/: xappwindow.h  xsanimate.h  xsanimatedpoint.h  xsbutton.h  xsconfig.h  xsgraphic.h  xsmovable.h  xsmovablepoint.h  xsmovablepolygon.h  xsmusic.h  xspolygonbutton.h  xsscene.h  xsupdater.h  xswindow.h
src/: main.cpp  xappwindow.cpp  xsanimate.cpp  xsanimatedpoint.cpp  xsbutton.cpp  xsconfig.cpp  xsgraphic.cpp  xsmovable.cpp  xsmovablepoint.cpp  xsmovablepolygon.cpp  xsmusic.cpp  xspolygonbutton.cpp  xsscene.cpp  xsupdater.cpp  xswindow.cpp
